--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
