--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
