--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
+    "nodemailer": "^6.3.1",
+    "puppeteer": "^2.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "request": "^2.88.0",
