--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "nodemailer": "^6.3.1",
     "puppeteer": "^2.0.0",
