--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "server": "webpack --mode production && node server/index.js "
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,7 @@
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.1.2",
-    "typescript": "^3.6.3",
+    "typescript": "^3.8.0-dev.20191128",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
@@ -24,6 +25,8 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "@types/material-ui": "^0.21.7",
+    "@types/react-redux": "^7.1.5",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
@@ -35,6 +38,10 @@
     "puppeteer": "^2.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
