--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.4",
