--- a/package.json
+++ b/package.json
@@ -4,24 +4,13 @@
   "description": "react+ts boilerplate",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development --watch",
+    "start": "node server/index.js",
     "build": "webpack --mode production",
-    "server": "webpack --mode production && node server/index.js "
+    "server": "webpack --mode production && node server/index.js ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build "
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "css-loader": "^3.3.0",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.1.2",
-    "typescript": "^3.8.0-dev.20191128",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
-  },
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
@@ -44,6 +33,16 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^3.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.1.2",
+    "typescript": "^3.8.0-dev.20191128",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   }
 }
