--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.4",
     "css-loader": "^3.3.0",
     "express": "^4.17.1",
+    "heroku-ssl-redirect": "0.0.4",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
