--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "heroku-ssl-redirect": "0.0.4",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.7.5",
     "nodemailer": "^6.3.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
